# oas

./: .gitignore  .gitignore.bak  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  agent_sdk.opam  dune-project  masc_mcp.opam.locked
.github/workflows/: ci.yml
config/: cascade.json
docs/: EVENT-CATALOG.md  api-stability.md  architecture.md  capability-manifest.md  collaboration-substrate-contract.md  config-externalization.md  custom-providers.md  multi-endpoint-setup.md  ollama-cloud-setup.md  provider-capabilities-spec.md  sdk-independence-principle.md  stateful-tools.md  testing-guide.md
docs/_audit/: 2026-04-17-coordination-leak-candidates.md
docs/analysis/: AUTONOMY-PRIMITIVES-BOUNDARY.md  compatibility-gap-analysis-2026-05-04.md
docs/rfc/: RFC-tool-selector.md  (+7 more)
examples/: agent_failure_observability.ml  autonomy_primitives_demo.ml  basic_agent.ml  builder_patterns.ml  cascade_failover.ml  cli_transports_demo.ml  codegen_agent.ml  collaboration.ml  conformance_demo.ml  custom_provider.ml  direct_conformance_demo.ml  dune  error_handling.ml  governance_demo.ml  handoff_lifecycle.ml  hooks_and_guardrails.ml  memory_tools_demo.ml  memory_workflow.ml  observable_agent.ml  plan_execute_demo.ml  proof_demo.ml  review_agent.ml  streaming.ml  swarm_review.ml  tool_use.ml
examples/evals/: hello-trace.ndjson  mixed.jsonl  replay.jsonl
lib/: a2a_server.ml  a2a_task.ml  a2a_task_store.ml  agent.ml  agent_card.ml  agent_config.ml  agent_handoff.ml  agent_lifecycle.ml  agent_registry.ml  agent_sdk.ml  agent_sdk.mli  agent_tool.ml  agent_tool.mli  agent_tools.ml  agent_turn.ml  agent_typed.ml  agent_typed.mli  agent_types.ml  api.ml  api.mli  api_anthropic.ml  api_anthropic.mli  api_common.ml  api_common.mli  api_ollama.ml  api_openai.ml  api_openai.mli  api_zai.ml  api_zai.mli  append_instruction.ml  append_instruction.mli  approval.ml  approval.mli  artifact_service.ml  artifact_service.mli  async_agent.ml  async_agent.mli  audit.ml  audit.mli  autonomy_diff_guard.ml  (+307 more)
lib/agent/: agent.ml  agent.mli  agent_checkpoint.ml  agent_checkpoint.mli  agent_config.ml  agent_config.mli  agent_handoff.ml  agent_handoff.mli  agent_lifecycle.ml  agent_lifecycle.mli  agent_tools.ml  agent_tools.mli  agent_trace.ml  agent_trace.mli  agent_turn.ml  agent_turn.mli  agent_turn_budget.ml  agent_turn_budget.mli  agent_types.ml  agent_types.mli  builder.ml  builder.mli
lib/base/: dune  guardrails.mli  model_registry.ml  result_syntax.ml  result_syntax.mli  tool.ml  types.mli
lib/context/: budget_strategy.ml  budget_strategy.mli
lib/judge/: judge.ml  judge.mli
lib/llm_provider/: api_common.ml  api_common.mli  backend_anthropic.ml  backend_anthropic.mli  backend_gemini.ml  backend_gemini.mli  backend_glm.ml  backend_glm.mli  backend_ollama.ml  backend_ollama.mli  backend_openai.ml  backend_openai.mli  backend_openai_parse.ml  backend_openai_parse.mli  backend_openai_serialize.ml  backend_openai_serialize.mli  backend_tool_call_harness.ml  backend_tool_call_harness.mli  cache.ml  cache.mli  capabilities.ml  capabilities.mli  capability_filter.ml  capability_filter.mli  capability_manifest.ml  capability_manifest.mli  cascade_config.ml  cascade_config.mli  cascade_config_loader.ml  cascade_config_loader.mli  cascade_executor.ml  cascade_fsm.ml  cascade_fsm.mli  cascade_health_filter.ml  cascade_health_tracker.ml  cascade_health_tracker.mli  cascade_model_resolve.ml  cascade_model_resolve.mli  cascade_throttle.ml  cascade_throttle.mli  (+76 more)
lib/pipeline/: pipeline.ml  pipeline.mli  pipeline_common.ml  pipeline_retry.ml  pipeline_stage_prepare.ml  pipeline_stage_route.ml  stage_collect.ml  stage_execute.ml  stage_input.ml  stage_output.ml  stage_parse.ml  stage_route.ml
lib/protocol/: a2a_client.ml  a2a_client.mli  a2a_server.ml  a2a_server.mli  a2a_task.ml  a2a_task.mli  a2a_task_store.ml  a2a_task_store.mli  agent_card.ml  agent_card.mli  agent_registry.ml  agent_registry.mli  mcp.ml  mcp.mli  mcp_http.ml  mcp_http.mli  mcp_schema.ml  mcp_schema.mli  mcp_session.ml  mcp_session.mli  mcp_typed_client.ml  mcp_typed_client.mli
lib_swarm/: dune  eval_harness.ml  eval_harness.mli  runner.ml  runner.mli  selection.ml  selection.mli  swarm_channel.ml  swarm_channel.mli  swarm_checkpoint.ml  swarm_checkpoint.mli  swarm_plan_cache.ml  swarm_plan_cache.mli  swarm_types.ml  swarm_types.mli  test_helpers.ml  test_helpers.mli  traced_swarm.ml  traced_swarm.mli
scripts/: annotate_stability.py  check-local-pins.sh  check-model-inventory-truth.sh  check-sdk-independence.sh  check-tag-drift.sh  check-transport-truth.sh  dune-local.sh  mcp-sdk-pin.sh  release.sh  sync-version-truth.sh
specs/: AgentLifecycle-buggy.cfg  AgentLifecycle.cfg  AgentLifecycle.tla  CascadeFSM-buggy.cfg  CascadeFSM-shrink.cfg  CascadeFSM.cfg  CascadeFSM.tla  CascadeFSMShrink.cfg  CascadeFSMShrink.tla  CascadeFSM_TTrace_1776014976.tla  ContentReplacementState-buggy.cfg  ContentReplacementState.cfg  ContentReplacementState.tla  ContextWindowExhaustion-buggy.cfg  ContextWindowExhaustion.cfg  ContextWindowExhaustion.tla  EventBusCausality-buggy.cfg  EventBusCausality.cfg  EventBusCausality.tla
test/: dune  test_a2a.ml  test_a2a_client.ml  test_a2a_client_cov.ml  test_a2a_full.ml  test_a2a_task_store.ml  test_a2a_task_unit.ml  test_agent.ml  test_agent_auto_dump.ml  test_agent_card.ml  test_agent_config.ml  test_agent_config_deep.ml  test_agent_lifecycle.ml  test_agent_pipeline.ml  test_agent_race.ml  test_agent_registry.ml  test_agent_sdk.ml  test_agent_stream.ml  test_agent_tool.ml  test_agent_turn.ml  test_agent_turn_budget_unit.ml  test_agent_typed.ml  test_api.ml  test_api_coverage.ml  test_api_dispatch.ml  test_append_instruction.ml  test_approval.ml  test_approval_pipeline.ml  test_artifact_service.ml  test_async_agent.ml  test_atomic_write_race.ml  test_audit.ml  test_autonomy_smoke.ml  test_autonomy_trace_unit.ml  test_backend_gemini.ml  test_body_timeout.ml  test_budget_strategy.ml  test_bug_hunt.ml  test_builder.ml  test_builder_coverage.ml  (+231 more)
test/complete_retry/: dune  test_complete_retry.ml
(+16 files in other folders)
