(executable
 (name basic_agent)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name tool_use)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name streaming)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name proof_demo)
 (libraries agent_sdk yojson unix))

(executable
 (name conformance_demo)
 (libraries agent_sdk yojson unix))

(executable
 (name direct_conformance_demo)
 (libraries agent_sdk eio eio_main cohttp-eio yojson unix))

(executable
 (name review_agent)
 (libraries agent_sdk eio eio_main yojson unix str))

(executable
 (name swarm_review)
 (libraries agent_sdk agent_sdk_swarm eio eio_main yojson unix))

(executable
 (name codegen_agent)
 (libraries agent_sdk eio eio_main yojson unix))

(executable
 (name hooks_and_guardrails)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name error_handling)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name memory_workflow)
 (libraries agent_sdk eio eio_main yojson unix))

(executable
 (name memory_tools_demo)
 (libraries agent_sdk yojson unix))

(executable
 (name collaboration)
 (libraries agent_sdk eio eio_main yojson unix))

(executable
 (name builder_patterns)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name custom_provider)
 (libraries agent_sdk eio eio_main yojson))

(executable
 (name cascade_failover)
 (libraries agent_sdk llm_provider eio eio_main yojson))

(executable
 (name observable_agent)
 (libraries agent_sdk llm_provider eio eio_main cohttp-eio yojson unix))

(executable
 (name governance_demo)
 (libraries agent_sdk yojson unix))

(executable
 (name plan_execute_demo)
 (libraries agent_sdk yojson unix))
