(executable
 (name test_local_llm)
 (modules test_local_llm)
 (libraries agent_sdk eio eio_main yojson))

(test
 (name test_metrics_aggregating)
 (modules test_metrics_aggregating)
 (libraries agent_sdk alcotest))

(test
 (name test_complete_cascade)
 (modules test_complete_cascade)
 (libraries agent_sdk alcotest))

(test
 (name test_capabilities)
 (modules test_capabilities)
 (libraries agent_sdk alcotest))
