(include_subdirs no)

(library
 (name llm_provider)
 (public_name agent_sdk.llm_provider)
 (libraries
  base yojson
  ppx_deriving_yojson.runtime
  eio
  eio.unix
  eio_main
  unix
  str
  cohttp-eio
  tls
  tls-eio
  ca-certs
  uri)
 (inline_tests)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show ppx_inline_test))
 (instrumentation
  (backend bisect_ppx)))
